# RayTracer

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/glad/: glad.c  glad.h
res/shaders/: fragment.shader  vertex.shader
src/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Main.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp  Wrapper.cpp  Wrapper.hpp  imgui.ini
